Code smells (#1542)
Co-authored-by: Andrey Pereverzin <andrey.pereverzin@hmcts.net>